traccia_1_4_Salesforce/force-app/main/default/objects/Prenotazione__c/Prenotazione__c.object-meta.xml
<CustomObject>
    <label>Prenotazione</label>
    <nameField>
        <displayFormat>PRT-{0000000}</displayFormat>
        <label>Prenotazione Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prenotazioni</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>