traccia_1_4_Salesforce/force-app/main/default/objects/Prenotazione__c/fields/data_fine__c.field-meta.xml
<CustomField>
    <fullName>data_fine__c</fullName>
    <label>Data Fine</label>
    <type>Date</type>
</CustomField>