traccia_1_4_Salesforce/force-app/main/default/objects/Prenotazione__c/fields/data_inizio__c.field-meta.xml
<CustomField>
    <fullName>data_inizio__c</fullName>
    <label>Data inizio</label>
    <type>Date</type>
</CustomField>