traccia_1_4_Salesforce/force-app/main/default/objects/Prenotazione__c/fields/metodo_pagamento__c.field-meta.xml
<CustomField>
    <fullName>metodo_pagamento__c</fullName>
    <label>Metodo pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bonifico</fullName>
            </value>
            <value>
                <fullName>Carta_di_credito</fullName>
            </value>
            <value>
                <fullName>Carta_di_debito_Bancomat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>