traccia_1_4_Salesforce/force-app/main/default/objects/Prenotazione__c/fields/Stanza__c.field-meta.xml
<CustomField>
    <fullName>Stanza__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stanza</label>
    <referenceTo>Stanza__c</referenceTo>
    <relationshipLabel>Prenotazioni</relationshipLabel>
    <relationshipName>Prenotazioni</relationshipName>
    <type>Lookup</type>
</CustomField>