traccia_1_4_Salesforce/force-app/main/default/objects/Prenotazione__c/fields/stato_pagamento__c.field-meta.xml
<CustomField>
    <fullName>stato_pagamento__c</fullName>
    <label>Stato pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>credito_soggiorno</fullName>
            </value>
            <value>
                <fullName>pagamento_effettuato</fullName>
            </value>
            <value>
                <fullName>in_verifica</fullName>
            </value>
            <value>
                <fullName>annullato_utente</fullName>
            </value>
            <value>
                <fullName>annullato_verifica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>