traccia_1_4_Salesforce/force-app/main/default/objects/Prenotazione__c/fields/stato_pagamento_user_notified__c.field-meta.xml
<CustomField>
    <fullName>stato_pagamento_user_notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>stato_pagamento_user_notified</label>
    <type>Checkbox</type>
</CustomField>