traccia_1_4_Salesforce/force-app/main/default/objects/Prenotazione__c/fields/Utenza_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Utenza_Cliente__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Utenza Cliente</label>
    <referenceTo>utenza_cliente__c</referenceTo>
    <relationshipLabel>Prenotazioni</relationshipLabel>
    <relationshipName>Prenotazioni</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>