traccia_1_4_Salesforce/force-app/main/default/objects/Prenotazione__c/validationRules/VR_DataInizioDataFine.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_DataInizioDataFine</fullName>
    <active>true</active>
    <errorConditionFormula>data_fine__c &lt;= data_inizio__c</errorConditionFormula>
    <errorDisplayField>data_fine__c</errorDisplayField>
    <errorMessage>La data fine deve essere maggiore rispetto la data inizio della prenotazione</errorMessage>
</ValidationRule>