traccia_1_4_Salesforce/force-app/main/default/objects/Prenotazione__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stanza__c</columns>
    <columns>Utenza_Cliente__c</columns>
    <columns>data_inizio__c</columns>
    <columns>data_fine__c</columns>
    <columns>stato_pagamento__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>